[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esgtools"
description = "A Python library to build a systematic ESG portfolio"
authors = [
    {name = "Nicolas Corthorn", email = "nicolas.corthorn@gmail.com"}
]
requires-python = ">=3.9"
license = {text = "BSD 3-Clause License"}
keywords = ["ESG", "NLP", "finance", "investment"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "esgtools.__version__"}
readme = {file = ["README.md", "LICENSE"]}

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
include = ["esgtools*"]
where = ["."]
exclude = ["examples*", "docs*"]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true